feat: update CORS configuration and enhance security for API endpoints